# SVR07-Recomp-Linux

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DISCLAIMER.md  LICENSE  README.md  keybinds.txt  run.sh  svr07_config.toml
config/: functions.toml
src/: main.cpp  svr07_app.h
